docs: tasks setup

--- a/index.html
+++ b/index.html
@@ -1,67 +1,13 @@
-<!DOCTYPE html> 
-
+<!doctype html>
 <html lang="en">
-	<head>
-        <meta charset="UTF-8">
-        <title>My Resume Page</title>
-        <link rel="stylesheet" href="./style.css">
-	</head>
-	
-	<body>
-        <header>Sakeeb Awwal AYIGORO </header> <hr style="height: 2px;color: black;">
-
-<div>
-        
-<section class="box" id="box2">
-        <img src="./assets/images/profile pic.png"  alt="Profile Picture" > 
-        <h2>Contact Information </h2>
-        <p><strong>Address: </strong>Sheffield, UK </p>
-        <p><strong>Email: </strong>sakeebmawwal@gmail.com</p>
-        <p><strong><a href="https://www.linkedin.com/in/sakeeb-awwal-ayigoro">Linkedin Profile</a></p>
-        <p><strong><a href="https://github.com/amazingawwal">GitHub Profile</a></p>   
-        <p> <a href="./about-me.html"> About me</a></p>    
-</section> 
-<section class="vertical-separator" class="box"></section>
-<section class="vertical-separate" class="box"></section>
- <article>As a supply chain analyst with over 4 years industry experience, I am comfortable using various digital tools for researching, data analysis and visualization as highlighted below; </article>
-<section class="box" id="box1">
-    <main>
-        <h2 >Research, Data Analysis and Visualization Project</h2> <hr>
-        <ul>
-            <li>After a rigorous Couch-to-Coder Boot-Camp, I was able to to hone the researching skill of how to use Python Programming Language for web scrapping, data wrangling and data presentation.  </li>
-            <a href="./pdf/Couch-to-Coder.pdf">Couch-to-Coder</a>
-            <li>I have over the years mastered the use of Power BI for data querying, cleaning, analyzing and presentation</li>
-                 <ol> 
-                   <li> <a href="./Power BI/VanderSaal Project.pbix">Project for Power BI Desktop</a> </li>
-                   <li> <a href="/Power BI/VanderSaal Project.pdf">Project PDF File</a> </li>
-                </ol>
-            <li>I am proficient in using all 4 major SQL commands (DDL, DQL,    DML and DCL) to manage databases.</li>
-        </ul>
-    </main>
-    <main>
-        <h2 > Low Code Application Development</h2> <hr>
-             <ul>
-                  <li>Completed a 4-Month Power Up program offered by Microsoft that enabled me master Low Code/No Code Apps Development using the Microsoft Power Platform (Power Apps, Power Automate, Power BI)</li>
-                  <a href="https://www.credly.com/badges/db031ba2-a8f1-40f6-8e89-261ac022a2fd/public_url">Microsoft Power Up Badge</a>
-                 <li>Using my Rapid Applications Development (RAD) skills, I can build easy to use, mobile applications that can be used for data collection.  With Power BI embedded, ease of analysis  would be achievable</li>
-                 <li>Here is a link to an App I developed for my final project submission</li>
-                 <a href="https://flip.com/s/9ybT_DDcvyHd">Employee Discount App</a>
-            </ul>    
-    </main>
-    <main>
-        <h2 >Web Development</h2> <hr> 
-        IBM Coding & edX Coding Boot-Camp  
-             <ol>
-                    <li>Built responsive web applications with Javascript, HTML and CSS</li>
-                    <li>Collaborated with team members using GitLab and GitHub</li>
-                    <li>Developed version controls using Git </li>
-            </ol>
-    </main>
-    </section>
-    </div>
-	</body>
-
-    <footer>&copy; Sakeeb Awwal Ayigoro <br>
-       
-    </footer>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React + TS</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
